add sign up & login with JWT
